# hotel-review-sentiment-analysis

./: .gitignore  README.md  pyproject.toml
classifier/: ml.py
docs/: project_steps.md
notebook/: 1_preprocess_data.ipynb  2_eda.ipynb  3_machine_learning.ipynb  4_llm_optional.ipynb  best_model.joblib  deep_learning.ipynb  eda.ipynb  evaluate_ml.ipynb  llm.ipynb  machine_learning.ipynb  ml.ipynb  preprocess_data.ipynb
