[tool.poetry]
name = "hotel-review-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["doanhieung <doanhieu.ng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
wordcloud = "^1.9.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
